--- a/src/components/FrameComponent.css
+++ b/src/components/FrameComponent.css
@@ -21,38 +21,19 @@
 }
 
 .frame-disabled {
-    margin: 0 24px 0 0;
-    width: 280px;
-    height: 190px;
-    background: rgba(5, 12, 48, 0.4);
-    border: 1px solid rgba(255, 255, 255, 30%);
-    border-radius: 16px;
-    box-shadow: 0px 0px 90px 0px rgba(0, 255, 209, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     opacity: 40%;
-    transition: all 0.5s;
     pointer-events: none;
 }
 
-.frame-final {
-    margin: 0 24px 0 0;
-    width: 280px;
-    height: 190px;
-    background: rgba(5, 12, 48, 0.4);
+.frame-disabled-final {
     border: 1px solid rgb(73, 198, 99, 100%);
-    border-radius: 16px;
-    box-shadow: 0px 0px 90px 0px rgba(0, 255, 209, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 40%;
-    transition: all 0.5s;
-    pointer-events: none;
 }
 
-.frame-display {
+.frame-hover {
+    border: 1px solid rgb(73, 198, 99, 100%);
+}
+
+.frame--display {
     display: none;
 }
 
@@ -65,7 +46,7 @@
     align-items: center;
 }
 
-.frame__button--button {
+.button__component {
     cursor: pointer;
     width: 254px;
     height: 48px;
@@ -78,15 +59,15 @@
     transition: all 0.5s;
 }
 
-.frame__button--button:hover {
+.button__component--hover {
     background: linear-gradient(90deg, rgba(8, 183, 223) 3%, rgba(5, 183, 224) 7%, rgba(0, 131, 235) 96%);
 }
 
-.frame__button--button:active {
+.button__component--active {
     background: linear-gradient(90deg, rgba(64, 80, 159) 3%, rgba(67, 81, 160) 7%, rgba(30, 84, 205) 96%);
 }
 
-.frame__button--button:disabled {
+.button__component--disabled {
     pointer-events: none;
     cursor: not-allowed;
     opacity: 50%;
@@ -132,14 +113,14 @@
     align-items: center;
 }
 
-.input--span {
+.input-span {
     font-size: 9px;
     margin: 4px 0 0 0;
     color: rgba(255, 255, 255, 0.5);
     transition: 0.3s;
 }
 
-.input--span_incorrect {
+.input-span--incorrect {
     font-size: 9px;
     margin: 4px 0 0 0;
     color: rgba(255, 0, 0, 100%);
@@ -169,32 +150,13 @@
     text-indent: 13px;
 }
 
-.email-input:focus {
+.email-input--focus,
+.email-input--disabled {
     border: 1px solid rgb(73, 198, 99, 100%);
 }
 
-.email-input--final {
-    width: 254px;
-    height: 50px;
-    border-radius: 6px;
-    border: 1px solid rgb(73, 198, 99, 100%);
-    background-color: #051237;
-    color: #ffffff;
-    text-indent: 13px;
-    outline: none;
-    transition: 0.3s;
-}
-
-.email-input--incorrect {
-    width: 254px;
-    height: 50px;
-    border-radius: 6px;
+.email-input--invalid {
     border: 1px solid rgb(255, 0, 0, 80%);
-    background-color: #051237;
-    color: #ffffff;
-    text-indent: 13px;
-    outline: none;
-    transition: 0.3s;
 }
 
 
@@ -216,19 +178,19 @@
     flex-direction: column;
 }
 
-.share--span {
+.share-span {
     opacity: 0%;
     user-select: none;
 }
 
-.share--span_incorrect {
+.share-span--incorrect {
     font-size: 9px;
     margin: 10px 0 0 13px;
     color: rgba(255, 0, 0, 100%);
     opacity: 100%;
 }
 
-.share--icons {
+.share-icons {
     height: 100%;
     display: flex;
     flex-direction: row;
